modules/grammars/tool/src/test/resources/cocos/valid/UniqueResource.td
package valid;

tool UniqueResource {
    attribute path = "some/awesome/path";

    resource SOME_RESOURCE {
        attribute path = "some/other/awesome/path";
    }
}
