modules/grammars/tool/src/test/resources/cocos/invalid/ValidAttributeResources.td
package invalid;

resources ValidAttributeResources {
    attribute path = "some/strange/path";

    resource SOME_RESOURCE {
         attribute label = "Some Other Label?";
     }
}